--- a/final_project/notebooks/eda.ipynb
+++ b/final_project/notebooks/eda.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "# added manually in the project settings\n",
     "# see https://stackoverflow.com/questions/30924664/how-to-manage-sys-path-globally-in-pycharm\n",
-    "from utils.data_utils import load_dataset_to_df"
+    "from utils.data_utils import create_dataset"
    ],
    "metadata": {
     "collapsed": false,
@@ -213,7 +213,7 @@
    "outputs": [],
    "source": [
     "path = '../data/iahlt-release-2022-06-09/ne/ar'\n",
-    "df_ar = load_dataset_to_df(path, columns=[\"text\", \"ner\"], take_first_ner=False)"
+    "df_ar = create_dataset(path, columns=[\"text\", \"ner\"], take_first_ner=False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -812,7 +812,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def load_dataset_to_df(path, pattern=\"*.biose\", columns=[\"text\", \"ner\"]):\n",
+    "def create_dataset(path, pattern=\"*.biose\", columns=[\"text\", \"ner\"]):\n",
     "    all_files = glob.glob(os.path.join(path, pattern))\n",
     "\n",
     "    res = pd.DataFrame()\n",
@@ -838,7 +838,7 @@
    "outputs": [],
    "source": [
     "path = '../data/iahlt-release-2022-06-09/ne/ar'\n",
-    "df_ar = load_dataset_to_df(path)"
+    "df_ar = create_dataset(path)"
    ],
    "metadata": {
     "collapsed": false,
